<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColor">
    <RelativeLayout
        android:id="@+id/mainrl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl2"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/outerlogo"/>
            <TextView
                android:id="@+id/appname"
                android:layout_below="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24dip"
                android:layout_marginTop="8dip"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="sans-serif-medium"
                android:textColorHighlight="@color/PrimaryDarkColor"/>
        </RelativeLayout>
        <!--F&#160;I&#160;E&#160;L&#160;D&#160;I&#160;Q&#160;-->
        <RelativeLayout
            android:id="@+id/rllogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl1"
            android:layout_margin="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:visibility="gone"
            android:background="@drawable/border">
            <EditText android:id="@+id/username" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_username"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18dp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/usericon"
                android:singleLine="true" />
            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:layout_below="@+id/username" android:maxLines="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="18dp"
                android:drawableLeft="@drawable/passwordicon"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:singleLine="true" />
            <Button
                android:id="@+id/loginbtn"
                android:layout_below="@id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/PrimaryColor"
                android:text="Login"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dip"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buildings"/>
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@+id/building"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dp"
            android:visibility="invisible"/>
        <View
            android:id="@+id/view1"
            android:layout_below="@+id/image_view"
            android:layout_width="fill_parent"
            android:layout_height="10px"
            android:background="@color/PrimaryDarkColor" >
        </View>
        <TextView
            android:id="@+id/servermsg"
            android:layout_below="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textSize="16dip"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:text="Contacting Server!! Please Wait..."/>
    </RelativeLayout>
</RelativeLayout>