<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/PrimaryColor"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <ImageView
            android:id="@+id/callimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_call"
            android:layout_marginRight="10dp"
            android:layout_gravity="end"
            android:gravity="right|top">
        </ImageView>
        <ImageView
            android:id="@+id/smsimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_dialog_email"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_gravity="right"
            android:gravity="right|top">
        </ImageView>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@id/toolbar1"
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iconimage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/location_marker"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/taskref"
            android:layout_below="@+id/iconimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Ref - 1231232"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/PrimaryColor"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/tasktype"
            android:layout_below="@+id/taskref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Type - "
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/PrimaryColor"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/codeid"
            android:layout_below="@+id/tasktype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COD Id - 9868969"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark"
            android:layout_margin="4dp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/amount"
            android:layout_below="@+id/codeid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs . 1001"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/holo_green_dark"
            android:layout_margin="4dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/rl1"
        android:layout_width="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_height="fill_parent"
        android:background="@color/white">
        <ScrollView
            android:id="@+id/scrollViewrl1"
            android:layout_above="@+id/signaturelayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="false">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">
                <RelativeLayout
                    android:id="@+id/triprl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:id="@+id/tripimg"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/triptruck"/>
                    <TextView
                        android:id="@+id/tripid"
                        android:layout_toRightOf="@+id/tripimg"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="877658"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/namerl"
                    android:layout_below="@+id/triprl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:id="@+id/nameimg"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_action_account_box"/>
                    <TextView
                        android:id="@+id/name"
                        android:layout_toRightOf="@+id/nameimg"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Ashok kumar"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/mobilerl"
                    android:layout_below="@+id/namerl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:id="@+id/mobileimg"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/mobile"/>
                    <TextView
                        android:id="@+id/mobile"
                        android:layout_toRightOf="@+id/mobileimg"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Ashok kumar"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/zipcoderl"
                    android:layout_below="@+id/mobilerl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:id="@+id/zipcodeimg"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/zicode"/>
                    <TextView
                        android:id="@+id/zipcode"
                        android:layout_toRightOf="@+id/zipcodeimg"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Ashok kumar"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/addressrl"
                    android:layout_below="@+id/zipcoderl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:id="@+id/addressimg"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/location_icon"/>
                    <TextView
                        android:id="@+id/address"
                        android:layout_toRightOf="@+id/addressimg"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Ashok kumar"/>
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_alignParentBottom="true">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/PrimaryColor"
                android:textColor="#ffffff"
                android:text="@string/task_button_print"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/task_button_print" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="3dp"
            android:orientation="vertical">
          <!--  <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/PrimaryColor"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/task_button_pick"
                android:id="@+id/task_button_pick"
                android:visibility="gone"
                android:onClick="clicked_pick"/>-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/PrimaryColor"
                android:textColor="#ffffff"
                android:text="@string/task_button_delivered"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/task_button_delivered"
                android:onClick="click_delivered_or_pick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/PrimaryColor"
                android:textColor="#ffffff"
                android:text="@string/task_button_doorstep"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/task_button_doorstep"
                android:onClick="click_doorstep"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="3dp"
            android:layout_weight="0.5">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/PrimaryColor"
                android:textColor="#ffffff"
                android:text="@string/task_button_failed"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/task_button_faild"
                android:onClick="click_failed"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/PrimaryColor"
                android:textColor="#ffffff"
                android:text="@string/task_button_cancel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/task_button_cancel"
                android:visibility="gone"
                android:onClick="click_cancel"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>